srotas/policy/kyverno/policy-block-host-namespaces.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-host-namespaces
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: no-host-namespaces
      match:
        any:
          - resources:
              kinds: ["Pod","Deployment","StatefulSet","DaemonSet","Job","CronJob"]
      validate:
        message: "hostNetwork, hostPID, and hostIPC must not be enabled."
        pattern:
          spec:
            =(hostNetwork): "false"
            =(hostPID): "false"
            =(hostIPC): "false"
